[package]
name = "wal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
memmap2 = "0.7.1"
byteorder="1.4.3"
crc32fast = "1.3.2"
winapi = {version="0.3.9",features=["memoryapi","winioctl", "ioapiset"]}
crossbeam-channel = "0.5.8"
rand_distr = "0.4.3"

[dev-dependencies]
hdrhistogram = "7.5.2"
quickcheck = "1.0.3"
regex = "1.8.1"
tempfile = "3.6.0"
chrono = "0.4.24"
